UrlApiDelegateImpl - upload radi i vraca sliku kroz Resource
