# src/main/java/com/jhipster/booklib/service/dto/BookDTO.java
@@ -1,0 +1,82 @@
+package com.jhipster.booklib.service.dto;
+
+import java.io.Serializable;
+import java.util.Objects;
+
+/**
+ * A DTO for the {@link com.jhipster.booklib.domain.Book} entity.
+ */
+public class BookDTO implements Serializable {
+    
+    private Long id;
+
+    private String isbn;
+
+    private Integer pageCount;
+
+    private Boolean processed;
+
+    
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+
+    public String getIsbn() {
+        return isbn;
+    }
+
+    public void setIsbn(String isbn) {
+        this.isbn = isbn;
+    }
+
+    public Integer getPageCount() {
+        return pageCount;
+    }
+
+    public void setPageCount(Integer pageCount) {
+        this.pageCount = pageCount;
+    }
+
+    public Boolean isProcessed() {
+        return processed;
+    }
+
+    public void setProcessed(Boolean processed) {
+        this.processed = processed;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) {
+            return true;
+        }
+        if (o == null || getClass() != o.getClass()) {
+            return false;
+        }
+
+        BookDTO bookDTO = (BookDTO) o;
+        if (bookDTO.getId() == null || getId() == null) {
+            return false;
+        }
+        return Objects.equals(getId(), bookDTO.getId());
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hashCode(getId());
+    }
+
+    @Override
+    public String toString() {
+        return "BookDTO{" +
+            "id=" + getId() +
+            ", isbn='" + getIsbn() + "'" +
+            ", pageCount=" + getPageCount() +
+            ", processed='" + isProcessed() + "'" +
+            "}";
+    }
+}
